--- a/introduction.tex
+++ b/introduction.tex
@@ -38,9 +38,11 @@ absence of your training wheels, you're more mobile than ever before. I think th
 trying to do here. Give this book the benefit of the doubt; just because your current system works better at first,
 doesn't necessarily it will be better in the long run.\improvement{this sounds patronizing}
 
-\section{Things I want to say that I stole from that stats book}
+\section{Misc Stuff I want to say}
 We have tried to write this book in an intuitive fashion, emphasizing concepts rather than mathematical details.
 The symbol \difficult indicates a technically difficult section, one that can be skipped without interrupting the flow
 of the discussion.
+
+Anjali Gopal: This is neat to systematically think about
 
 
